--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,7 +12,9 @@
     --dark-red-wine: #540B0E;
     --white: #FFF;
     --black: #000;
-    --pink: #e38389;
+    --blue: #2196f3;
+    --pink: #e91e63;
+    --purple: #9c27b0;
     --dark-grey: #404040;
     --light-grey-green: #4c6156;
     --green:#61bd2f;
