--- a/client/src/pages/assets/css/SingleWine.css
+++ b/client/src/pages/assets/css/SingleWine.css
@@ -1,6 +1,5 @@
 .single-wine-title {
     text-transform: uppercase;
-
 }
 
 .capitalize {
@@ -22,8 +21,8 @@
     width: fit-content;
     padding: 4px 24px;
     margin: auto;
-    background: rgb(88, 12, 12, 0.4);
-    box-shadow: 0 8px 32px 0 rgba(6, 6, 24, 0.37);
+    background: rgba(88, 12, 12, 0.40);
+    box-shadow: 0 8px 32px 0 rgba(6, 6, 24, 0.36);
     backdrop-filter: blur( 10px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
@@ -39,7 +38,6 @@
     text-align: center;
     background: linear-gradient(177deg, #f57070, #c84545, #8c1414);
     background-size: 600% 600%;
-
     -webkit-animation: AnimationName 35s ease infinite;
     -moz-animation: AnimationName 35s ease infinite;
     animation: AnimationName 35s ease infinite;
@@ -80,9 +78,8 @@
     width: 94px;
 }
 
-
-
 @media screen and (min-width: 768px) {
+
     .image-wine-glasses {
         background-size: contain;
     }
